# rust_examples

./: .gitignore  Cargo.toml
benches/: async_trait.rs  dynamic_dispatch.rs  simd_add.rs
function_programming_examples/step1/src/: main.rs
src/: lib.rs
