[package]
name = "rust-examples"
version = "0.1.0"
authors = ["sujinyanslip@gmail.com"]
edition = "2018"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
async-trait = "0.1.72"
criterion = { version = "0.5", features = ["html_reports"] }
enum_dispatch = "0.3"

[[bin]]
name = "hello"
path = "src/bin/std_examples/hello.rs"

# [[bin]]
# name = "async_trait"
# path = "src/bin/async_trait/main.rs"

[[bench]]
name = "async_trait"
harness = false

[[bench]]
name = "dynamic_dispatch"
harness = false
